[project]

name = "rbrapi"
version = "0.4"

authors = [
  { name="VWH", email="vwhe@proton.me" },
]

description = "Unofficial Python Client for Rocket Bot Royale Game API"
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/Rocket-Bot-Royale/api"
Issues = "https://github.com/Rocket-Bot-Royale/api/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["examples"]