[project]

name = "rbrapi"
version = "0.6"

authors = [
  { name="VWH", email="vwhe@proton.me" },
]

description = "Unofficial Python Client for Rocket Bot Royale Game API"
readme = "README.md"
requires-python = ">=3.8"

keywords = [
    "Rocket Bot Royale",
    "game API",
    "Unofficial API",
    "Python library",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "requests",
]

[project.urls]
Homepage = "https://github.com/rocket-bot-royale/api"
Issues = "https://github.com/rocket-bot-royale/api/issues"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["examples"]